--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@radix-ui/themes": "^2.0.3"
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/themes": "^2.0.3",
+        "@react-spring/web": "^9.7.3",
+        "radix-themes-tw": "^0.1.3"
     }
 }
